<resources>
    <string name="app_name">MyApp</string>

    <string name="add_user">Add new User</string>
    <string name="save_user">Save</string>
    <string name="edit_user">Edit</string>
    <string name="delete_user">Delete</string>


    <string name="user_name">User name</string>
    <string name="user_age">User age</string>
    <string name="user_id">ID</string>
    <string name="user_image">Image URL</string>

    <string name="toolbar_title">Toolbar Title</string>
    <string name="menu_title">some useful commands</string>

    <string name="button_save">Click this button "\n"to save current user</string>
    <string name="edit_username">Print here "\n"user NAME</string>

    <string name="edit_userage">Print here "\n"user AGE</string>

    <string name="edit_userUrl">Print here URL "\n"for profile image</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_maps">Map</string>


</resources>
